--- a/apps/privacy-panel/templates/gt/rpp_lock.html
+++ b/apps/privacy-panel/templates/gt/rpp_lock.html
@@ -15,7 +15,7 @@
             <h2 data-l10n-id="gt-rpp-lock-header">How to lock my phone?</h2>
             <p>
               <span data-l10n-id="gt-rpp-lock-desc1">If you have lost your phone and you want to lock it remotely just send an SMS with</span><br>
-              <b><span data-l10n-id="gt-rpp-lock-command">“RPP lock YOURPASSPHRASE”</span></b><br>
+              <b><span data-l10n-id="gt-rpp-lock-command">RPP lock YOURPASSPHRASE</span></b><br>
               <span data-l10n-id="gt-rpp-lock-desc2">to your phone number. The phone will lock itself and only you will be able to unlock it with your regular screen passcode.</span>
             </p>
           </div>
