--- a/apps/privacy-panel/templates/gt/rpp_locate.html
+++ b/apps/privacy-panel/templates/gt/rpp_locate.html
@@ -15,7 +15,7 @@
             <h2 data-l10n-id="gt-rpp-locate-header">How to locate my phone?</h2>
             <p>
               <span data-l10n-id="gt-rpp-locate-desc1">If your phone is lost, just take the phone of a friend and send a SMS with</span><br>
-              <b><span data-l10n-id="gt-rpp-locate-command">“RPP locate YOURPASSPHRASE“</span></b><br>
+              <b><span data-l10n-id="gt-rpp-locate-command">RPP locate YOURPASSPHRASE</span></b><br>
               <span data-l10n-id="gt-rpp-locate-desc2">to your phone number and you‘ll get the exact GPS coordinates via SMS in return. Make sure to set up the passphrase!</span>
             </p>
           </div>
