--- a/apps/privacy-panel/templates/gt/rpp_ring.html
+++ b/apps/privacy-panel/templates/gt/rpp_ring.html
@@ -15,7 +15,7 @@
             <h2 data-l10n-id="gt-rpp-ring-header">How to ring your phone?</h2>
             <p>
               <span data-l10n-id="gt-rpp-ring-desc1">It‘s easy! Just send an SMS with</span><br>
-              <b><span data-l10n-id="gt-rpp-ring-command">“RPP ring YOURPASSPHRASE”</span></b><br>
+              <b><span data-l10n-id="gt-rpp-ring-command">RPP ring YOURPASSPHRASE</span></b><br>
               <span data-l10n-id="gt-rpp-ring-desc2">to your phone number and it will ring until you find it and unlock it.</span>
             </p>
           </div>
