--- a/apps/privacy-panel/templates/rpp/features.html
+++ b/apps/privacy-panel/templates/rpp/features.html
@@ -13,21 +13,21 @@
             <input type="checkbox" name="rpp.locate.enabled" class="uninit">
             <span data-l10n-id="remote-locate">Remote Locate</span>
           </label>
-          <p class="explanation" data-l10n-id="remote-locate-desc">You can locate this device via SMS as following: “RPP locate YOURPASSPHRASE”</p>
+          <p class="explanation" data-l10n-id="remote-locate-desc">You can locate this device via SMS as following: RPP locate YOURPASSPHRASE</p>
         </li>
         <li class="remote-ring hint">
           <label class="pack-switch">
             <input type="checkbox" name="rpp.ring.enabled" class="uninit">
             <span data-l10n-id="remote-ring">Remote Ring</span>
           </label>
-          <p class="explanation" data-l10n-id="remote-ring-desc">You can ring this device via SMS as following: “RPP ring YOURPASSPHRASE”</p>
+          <p class="explanation" data-l10n-id="remote-ring-desc">You can ring this device via SMS as following: RPP ring YOURPASSPHRASE</p>
         </li>
         <li class="remote-lock hint">
           <label class="pack-switch">
             <input type="checkbox" name="rpp.lock.enabled" class="uninit">
             <span data-l10n-id="remote-lock">Remote Lock</span>
           </label>
-          <p class="explanation" data-l10n-id="remote-lock-desc">You can lock this device via SMS as following: “RPP lock YOURPASSPHRASE”</p>
+          <p class="explanation" data-l10n-id="remote-lock-desc">You can lock this device via SMS as following: RPP lock YOURPASSPHRASE</p>
         </li>
       </ul>
       <div class="overlay">
