--- a/apps/privacy-panel/templates/ala/exception.html
+++ b/apps/privacy-panel/templates/ala/exception.html
@@ -54,7 +54,7 @@
       <div class="modal modal-alert">
         <h1 data-l10n-id="attention">Attention!</h1>
         <p data-l10n-id="ala-custom-location-alert">You haven't set a custom location yet. Please set this before working on other settings!</p>
-        <button class="btn btn-blue" data-l10n-id="set-custom-location">Set custom location</button>
+        <button class="btn btn-blue" data-l10n-id="set-location">Set location</button>
       </div>
     </div>
   </template>
