--- a/apps/privacy-panel/templates/ala/main.html
+++ b/apps/privacy-panel/templates/ala/main.html
@@ -4,20 +4,20 @@
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="location-accuracy">Location Accuracy</h1>
+      <h1 data-l10n-id="ala-panel">Location Accuracy</h1>
     </header>
     <div>
       <ul>
         <li>
           <label class="pack-switch">
             <input type="checkbox" class="uninit" name="geolocation.enabled">
-            <span data-l10n-id="use-geolocation">Use geolocation</span>
+            <span data-l10n-id="use-geolocation">Geolocation</span>
           </label>
         </li>
         <li class="show-when-geolocation-on">
           <label class="pack-switch">
             <input type="checkbox" class="uninit" name="ala.settings.enabled">
-            <span data-l10n-id="use-location-adjustment">Use location adjustment</span>
+            <span data-l10n-id="use-location-adjustment">Location adjustment</span>
           </label>
         </li>
         <li class="hide-when-ala-on">
@@ -65,7 +65,7 @@
           <div class="modal modal-alert">
             <h1 data-l10n-id="attention">Attention!</h1>
             <p data-l10n-id="ala-custom-location-alert">You haven't set a custom location yet. Please set this before working on other settings!</p>
-            <button class="btn btn-blue">Set custom location</button>
+            <button class="btn btn-blue" data-l10n-id="set-location">Set location</button>
           </div>
         </div>
       </ul>
