--- a/apps/privacy-panel/templates/rpp/features.html
+++ b/apps/privacy-panel/templates/rpp/features.html
@@ -4,7 +4,7 @@
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel">Remote Privacy Protection</h1>
+      <h1 data-l10n-id="rpp-panel">Remote Protection</h1>
     </header>
     <div>
       <ul class="remote-settings">
@@ -34,7 +34,7 @@
         <div class="modal modal-alert">
           <h1 data-l10n-id="attention">Attention!</h1>
           <p data-l10n-id="rpp-lockscreen-alert">Please activate lockscreen AND passcode in the system settings to use the Remote Privacy Protection.</p>
-          <a href="#rpp-screenlock" class="btn btn-blue pp-link">Take me there</a>
+          <a href="#rpp-screenlock" class="btn btn-blue pp-link" data-l10n-id="take-me-there">Take me there</a>
         </div>
       </div>
     </div>
