--- a/apps/privacy-panel/templates/rpp/change_pass.html
+++ b/apps/privacy-panel/templates/rpp/change_pass.html
@@ -4,7 +4,7 @@
       <a class="pp-link back" href="#rpp-main">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel">Remote Privacy Protection</h1>
+      <h1 data-l10n-id="rpp-panel">Remote Protection</h1>
     </header>
     <div>
       <ul>
@@ -18,10 +18,10 @@
             <select class="pin-type"></select>
             <input class="pin" x-inputmode="digit" size="4" maxlength="4" type="password" placeholder="">
             <div class="pin-validation-message"></div>
-            <input class="pass1" type="password" data-l10-id="new-passphrase" placeholder="New passphrase">
-            <input class="pass2" type="password" data-l10-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
+            <input class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
+            <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
             <div class="validation-message"></div>
-            <input class="rpp-change-pass-ok btn" type="submit" value="OK">
+            <button class="rpp-change-pass-ok btn" type="submit" data-l10n-id="ok">OK</button>
           </form>
         </li>
       </ul>
