--- a/apps/privacy-panel/templates/rpp/main.html
+++ b/apps/privacy-panel/templates/rpp/main.html
@@ -4,7 +4,7 @@
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel">Remote Privacy Protection</h1>
+      <h1 data-l10n-id="rpp-panel">Remote Protection</h1>
     </header>
     <div>
       <ul id="rpp-register" class="rpp-box">
@@ -13,10 +13,10 @@
             Please set a passphrase to secure your remote features (maximum 100 characters).
           </p>
           <form id="rpp-register-form">
-            <input  class="pass1" type="password" data-l10-id="new-passphrase" placeholder="New passphrase">
-            <input class="pass2" type="password" data-l10-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
+            <input  class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
+            <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
             <div class="validation-message"></div>
-            <input class="rpp-register-ok btn" type="submit" value="OK">
+            <button class="rpp-register-ok btn" type="submit" data-l10n-id="ok">OK</button>
           </form>
         </li>
       </ul>
@@ -28,12 +28,12 @@
         </li>
         <li>
           <form id="rpp-login-form">
-            <input class="pass1" type="password" data-l10-id="passphrase" placeholder="Passphrase">
+            <input class="pass1" type="password" data-l10n-id="passphrase" placeholder="Passphrase">
             <div class="validation-message"></div>
             <a class="change-password-link link-text pp-link" href="#rpp-change-pass">
               <span data-l10n-id="rpp-change-password">Forgot/Change your passphrase?</span>
             </a>
-            <input class="rpp-login-ok btn" type="submit" value="OK">
+            <button class="rpp-login-ok btn" type="submit" data-l10n-id="ok">OK</button>
           </form>
         </li>
       </ul>
