Change "Remote Privacy Protection" into "Remote Protection"

--- a/apps/privacy-panel/templates/gt/rp_passphrase.html
+++ b/apps/privacy-panel/templates/gt/rp_passphrase.html
@@ -1,4 +1,4 @@
-<element name="gt-rpp-passphrase" extends="section">
+<element name="gt-rp-passphrase" extends="section">
   <template>
     <header class="gt-header">
       <a class="pp-link back" href="#root">
@@ -12,13 +12,13 @@
             <img src="style/images/guided_tour/privacy-panel-gt-07.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-passphrase-header"></h2>
-            <p data-l10n-id="gt-rpp-passphrase-desc"></p>
+            <h2 data-l10n-id="gt-rp-passphrase-header"></h2>
+            <p data-l10n-id="gt-rp-passphrase-desc"></p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-7"></div>
-            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-explain" data-l10n-id="back"></a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-locate" data-l10n-id="next"></a>
+            <a class="pp-link btn btn-dark-gray back" href="#gt-rp-explain" data-l10n-id="back"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rp-locate" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
