--- a/apps/privacy-panel/templates/gt/rp_ring.html
+++ b/apps/privacy-panel/templates/gt/rp_ring.html
@@ -1,4 +1,4 @@
-<element name="gt-rpp-ring" extends="section">
+<element name="gt-rp-ring" extends="section">
   <template>
     <header class="gt-header">
       <a class="pp-link back" href="#root">
@@ -12,17 +12,17 @@
             <img src="style/images/guided_tour/privacy-panel-gt-09.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-ring-header"></h2>
+            <h2 data-l10n-id="gt-rp-ring-header"></h2>
             <p>
-              <span data-l10n-id="gt-rpp-ring-desc1"></span><br>
-              <b><span data-l10n-id="gt-rpp-ring-command"></span></b><br>
-              <span data-l10n-id="gt-rpp-ring-desc2"></span>
+              <span data-l10n-id="gt-rp-ring-desc1"></span><br>
+              <b><span data-l10n-id="gt-rp-ring-command"></span></b><br>
+              <span data-l10n-id="gt-rp-ring-desc2"></span>
             </p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-9"></div>
-            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-locate" data-l10n-id="back"></a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-lock" data-l10n-id="next"></a>
+            <a class="pp-link btn btn-dark-gray back" href="#gt-rp-locate" data-l10n-id="back"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rp-lock" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
