--- a/apps/privacy-panel/templates/rp/change_pass.html
+++ b/apps/privacy-panel/templates/rp/change_pass.html
@@ -1,25 +1,25 @@
-<element name="rpp-change-pass" extends="section">
+<element name="rp-change-pass" extends="section">
   <template>
     <header>
-      <a class="pp-link back" href="#rpp-main">
+      <a class="pp-link back" href="#rp-main">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel"></h1>
+      <h1 data-l10n-id="rp-panel"></h1>
     </header>
     <div>
       <ul>
         <li>
-          <p class="description" data-l10n-id="rpp-change-password-description"></p>
+          <p class="description" data-l10n-id="rp-change-password-description"></p>
         </li>
         <li>
-          <form id="rpp-change-pass-form">
+          <form id="rp-change-pass-form">
             <select class="pin-type"></select>
             <input class="pin" x-inputmode="digit" size="8" maxlength="8" type="password" placeholder="">
             <div class="pin-validation-message"></div>
             <input class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
             <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
             <div class="validation-message"></div>
-            <button class="rpp-change-pass-ok btn" type="submit" data-l10n-id="ok"></button>
+            <button class="rp-change-pass-ok btn" type="submit" data-l10n-id="ok"></button>
           </form>
         </li>
       </ul>
