--- a/apps/privacy-panel/templates/rp/features.html
+++ b/apps/privacy-panel/templates/rp/features.html
@@ -1,30 +1,30 @@
-<element name="rpp-features" extends="section">
+<element name="rp-features" extends="section">
   <template>
     <header>
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel"></h1>
+      <h1 data-l10n-id="rp-panel"></h1>
     </header>
     <div>
       <ul class="remote-settings">
         <li class="remote-locate hint">
           <label class="pack-switch">
-            <input type="checkbox" name="rpp.locate.enabled" class="uninit">
+            <input type="checkbox" name="rp.locate.enabled" class="uninit">
             <span data-l10n-id="remote-locate"></span>
           </label>
           <p class="explanation" data-l10n-id="remote-locate-desc"></p>
         </li>
         <li class="remote-ring hint">
           <label class="pack-switch">
-            <input type="checkbox" name="rpp.ring.enabled" class="uninit">
+            <input type="checkbox" name="rp.ring.enabled" class="uninit">
             <span data-l10n-id="remote-ring"></span>
           </label>
           <p class="explanation" data-l10n-id="remote-ring-desc"></p>
         </li>
         <li class="remote-lock hint">
           <label class="pack-switch">
-            <input type="checkbox" name="rpp.lock.enabled" class="uninit">
+            <input type="checkbox" name="rp.lock.enabled" class="uninit">
             <span data-l10n-id="remote-lock"></span>
           </label>
           <p class="explanation" data-l10n-id="remote-lock-desc"></p>
@@ -33,8 +33,8 @@
       <div class="overlay">
         <div class="modal modal-alert">
           <h1 data-l10n-id="attention"></h1>
-          <p data-l10n-id="rpp-lockscreen-alert"></p>
-          <a href="#rpp-screenlock" class="btn btn-blue pp-link" data-l10n-id="take-me-there"></a>
+          <p data-l10n-id="rp-lockscreen-alert"></p>
+          <a href="#rp-screenlock" class="btn btn-blue pp-link" data-l10n-id="take-me-there"></a>
         </div>
       </div>
     </div>
