--- a/apps/privacy-panel/templates/rp/main.html
+++ b/apps/privacy-panel/templates/rp/main.html
@@ -1,35 +1,35 @@
-<element name="rpp-main" extends="section">
+<element name="rp-main" extends="section">
   <template>
     <header>
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel"></h1>
+      <h1 data-l10n-id="rp-panel"></h1>
     </header>
     <div>
-      <ul id="rpp-register" class="rpp-box">
+      <ul id="rp-register" class="rp-box">
         <li>
-          <p class="description" data-l10n-id="rpp-new-password-description"></p>
-          <form id="rpp-register-form">
+          <p class="description" data-l10n-id="rp-new-password-description"></p>
+          <form id="rp-register-form">
             <input  class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
             <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
             <div class="validation-message"></div>
-            <button class="rpp-register-ok btn" type="submit" data-l10n-id="ok"></button>
+            <button class="rp-register-ok btn" type="submit" data-l10n-id="ok"></button>
           </form>
         </li>
       </ul>
-      <ul id="rpp-login" class="rpp-box">
+      <ul id="rp-login" class="rp-box">
         <li>
-          <p class="description" data-l10n-id="rpp-login-description"></p>
+          <p class="description" data-l10n-id="rp-login-description"></p>
         </li>
         <li>
-          <form id="rpp-login-form">
+          <form id="rp-login-form">
             <input class="pass1" type="password" data-l10n-id="passphrase" placeholder="Passphrase">
             <div class="validation-message"></div>
-            <a class="change-password-link link-text pp-link" href="#rpp-change-pass">
-              <span data-l10n-id="rpp-change-password"></span>
+            <a class="change-password-link link-text pp-link" href="#rp-change-pass">
+              <span data-l10n-id="rp-change-password"></span>
             </a>
-            <button class="rpp-login-ok btn" type="submit" data-l10n-id="ok"></button>
+            <button class="rp-login-ok btn" type="submit" data-l10n-id="ok"></button>
           </form>
         </li>
       </ul>
