--- a/apps/privacy-panel/templates/rp/passcode.html
+++ b/apps/privacy-panel/templates/rp/passcode.html
@@ -1,7 +1,7 @@
-<element name="rpp-passcode" extends="section">
+<element name="rp-passcode" extends="section">
   <template>
     <header>
-      <a class="pp-link back" href="#rpp-screenlock">
+      <a class="pp-link back" href="#rp-screenlock">
         <span class="icon gaia-icon-back">back</span>
       </a>
       <menu type="toolbar">
