--- a/apps/privacy-panel/templates/gt/ala_exceptions.html
+++ b/apps/privacy-panel/templates/gt/ala_exceptions.html
@@ -18,7 +18,7 @@
           <div class="gt-action">
             <div class="gt-pager page-5"></div>
             <a class="pp-link btn btn-dark-gray back" href="#gt-ala-custom" data-l10n-id="back"></a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-explain" data-l10n-id="next"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rp-explain" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
