--- a/apps/privacy-panel/templates/gt/rp_explain.html
+++ b/apps/privacy-panel/templates/gt/rp_explain.html
@@ -1,4 +1,4 @@
-<element name="gt-rpp-explain" extends="section">
+<element name="gt-rp-explain" extends="section">
   <template>
     <header class="gt-header">
       <a class="pp-link back" href="#root">
@@ -12,13 +12,13 @@
             <img src="style/images/guided_tour/privacy-panel-gt-06.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-explain-header"></h2>
-            <p data-l10n-id="gt-rpp-explain-desc"></p>
+            <h2 data-l10n-id="gt-rp-explain-header"></h2>
+            <p data-l10n-id="gt-rp-explain-desc"></p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-6"></div>
             <a class="pp-link btn btn-dark-gray back" href="#gt-ala-exceptions" data-l10n-id="back"></a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-passphrase" data-l10n-id="next"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rp-passphrase" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
