--- a/apps/privacy-panel/templates/rp/screenlock.html
+++ b/apps/privacy-panel/templates/rp/screenlock.html
@@ -1,7 +1,7 @@
-<element name="rpp-screenlock" extends="section">
+<element name="rp-screenlock" extends="section">
   <template>
     <header>
-      <a class="pp-link back" href="#rpp-features">
+      <a class="pp-link back" href="#rp-features">
         <span class="icon gaia-icon-back">back</span>
       </a>
       <h1 data-l10n-id="screen-lock-header"></h1>
