--- a/apps/privacy-panel/templates/rpp/main.html
+++ b/apps/privacy-panel/templates/rpp/main.html
@@ -4,36 +4,32 @@
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel">Remote Protection</h1>
+      <h1 data-l10n-id="rpp-panel"></h1>
     </header>
     <div>
       <ul id="rpp-register" class="rpp-box">
         <li>
-          <p class="description" data-l10n-id="rpp-new-password-description">
-            Please set a passphrase to secure your remote features (maximum 100 characters).
-          </p>
+          <p class="description" data-l10n-id="rpp-new-password-description"></p>
           <form id="rpp-register-form">
             <input  class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
             <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
             <div class="validation-message"></div>
-            <button class="rpp-register-ok btn" type="submit" data-l10n-id="ok">OK</button>
+            <button class="rpp-register-ok btn" type="submit" data-l10n-id="ok"></button>
           </form>
         </li>
       </ul>
       <ul id="rpp-login" class="rpp-box">
         <li>
-          <p class="description" data-l10n-id="rpp-login-description">
-            Please enter your passphrase.
-          </p>
+          <p class="description" data-l10n-id="rpp-login-description"></p>
         </li>
         <li>
           <form id="rpp-login-form">
             <input class="pass1" type="password" data-l10n-id="passphrase" placeholder="Passphrase">
             <div class="validation-message"></div>
             <a class="change-password-link link-text pp-link" href="#rpp-change-pass">
-              <span data-l10n-id="rpp-change-password">Forgot/Change your passphrase?</span>
+              <span data-l10n-id="rpp-change-password"></span>
             </a>
-            <button class="rpp-login-ok btn" type="submit" data-l10n-id="ok">OK</button>
+            <button class="rpp-login-ok btn" type="submit" data-l10n-id="ok"></button>
           </form>
         </li>
       </ul>
