--- a/apps/privacy-panel/templates/gt/rpp_explain.html
+++ b/apps/privacy-panel/templates/gt/rpp_explain.html
@@ -12,15 +12,13 @@
             <img src="style/images/guided_tour/privacy-panel-gt-06.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-explain-header">Remote Privacy Protection? What is it?</h2>
-            <p data-l10n-id="gt-rpp-explain-desc">
-              If your phone is stolen or lost, you can use the Remote Privacy Protection. With another phone you can locate it, let it ring or even lock it remotely. You first have to set your personal passphrase and enable the features you will want to use (locate, ring and lock).
-            </p>
+            <h2 data-l10n-id="gt-rpp-explain-header"></h2>
+            <p data-l10n-id="gt-rpp-explain-desc"></p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-6"></div>
-            <a class="pp-link btn btn-dark-gray back" href="#gt-ala-exceptions" data-l10n-id="back">Back</a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-passphrase" data-l10n-id="next">Next</a>
+            <a class="pp-link btn btn-dark-gray back" href="#gt-ala-exceptions" data-l10n-id="back"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rpp-passphrase" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
