--- a/apps/privacy-panel/templates/gt/rpp_lock.html
+++ b/apps/privacy-panel/templates/gt/rpp_lock.html
@@ -12,17 +12,17 @@
             <img src="style/images/guided_tour/privacy-panel-gt-10.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-lock-header">How to lock my phone?</h2>
+            <h2 data-l10n-id="gt-rpp-lock-header"></h2>
             <p>
-              <span data-l10n-id="gt-rpp-lock-desc1">If you have lost your phone and you want to lock it remotely just send an SMS with</span><br>
-              <b><span data-l10n-id="gt-rpp-lock-command">RPP lock YOURPASSPHRASE</span></b><br>
-              <span data-l10n-id="gt-rpp-lock-desc2">to your phone number. The phone will lock itself and only you will be able to unlock it with your regular screen passcode.</span>
+              <span data-l10n-id="gt-rpp-lock-desc1"></span><br>
+              <b><span data-l10n-id="gt-rpp-lock-command"></span></b><br>
+              <span data-l10n-id="gt-rpp-lock-desc2"></span>
             </p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-10"></div>
-            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-ring" data-l10n-id="back">Back</a>
-            <a class="pp-link btn btn-blue back" href="#root" data-l10n-id="finish-tour">Finish Tour</a>
+            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-ring" data-l10n-id="back"></a>
+            <a class="pp-link btn btn-blue back" href="#root" data-l10n-id="finish-tour"></a>
           </div>
         </li>
       </ul>
