--- a/apps/privacy-panel/templates/gt/rpp_ring.html
+++ b/apps/privacy-panel/templates/gt/rpp_ring.html
@@ -12,17 +12,17 @@
             <img src="style/images/guided_tour/privacy-panel-gt-09.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-ring-header">How to ring your phone?</h2>
+            <h2 data-l10n-id="gt-rpp-ring-header"></h2>
             <p>
-              <span data-l10n-id="gt-rpp-ring-desc1">It‘s easy! Just send an SMS with</span><br>
-              <b><span data-l10n-id="gt-rpp-ring-command">RPP ring YOURPASSPHRASE</span></b><br>
-              <span data-l10n-id="gt-rpp-ring-desc2">to your phone number and it will ring until you find it and unlock it.</span>
+              <span data-l10n-id="gt-rpp-ring-desc1"></span><br>
+              <b><span data-l10n-id="gt-rpp-ring-command"></span></b><br>
+              <span data-l10n-id="gt-rpp-ring-desc2"></span>
             </p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-9"></div>
-            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-locate" data-l10n-id="back">Back</a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-lock" data-l10n-id="next">Next</a>
+            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-locate" data-l10n-id="back"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rpp-lock" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
