--- a/apps/privacy-panel/templates/rpp/change_pass.html
+++ b/apps/privacy-panel/templates/rpp/change_pass.html
@@ -4,24 +4,22 @@
       <a class="pp-link back" href="#rpp-main">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="rpp-panel">Remote Protection</h1>
+      <h1 data-l10n-id="rpp-panel"></h1>
     </header>
     <div>
       <ul>
         <li>
-          <p class="description" data-l10n-id="rpp-change-password-description">
-            To reset your passphrase please enter Passcode lock or SIM PIN and new passphrase.
-          </p>
+          <p class="description" data-l10n-id="rpp-change-password-description"></p>
         </li>
         <li>
           <form id="rpp-change-pass-form">
             <select class="pin-type"></select>
-            <input class="pin" x-inputmode="digit" size="4" maxlength="4" type="password" placeholder="">
+            <input class="pin" x-inputmode="digit" size="8" maxlength="8" type="password" placeholder="">
             <div class="pin-validation-message"></div>
             <input class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
             <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
             <div class="validation-message"></div>
-            <button class="rpp-change-pass-ok btn" type="submit" data-l10n-id="ok">OK</button>
+            <button class="rpp-change-pass-ok btn" type="submit" data-l10n-id="ok"></button>
           </form>
         </li>
       </ul>
