--- a/apps/privacy-panel/templates/rpp/passcode.html
+++ b/apps/privacy-panel/templates/rpp/passcode.html
@@ -5,34 +5,34 @@
         <span class="icon gaia-icon-back">back</span>
       </a>
       <menu type="toolbar">
-        <button class="passcode-change" data-mode="new" data-l10n-id="change">Change</button>
-        <button class="passcode-create" data-mode="create" data-l10n-id="create">Create</button>
+        <button class="passcode-change" data-mode="new" data-l10n-id="change"></button>
+        <button class="passcode-create" data-mode="create" data-l10n-id="create"></button>
       </menu>
-      <h1 data-l10n-id="passcode-heading" data-mode="create">Passcode</h1>
-      <h1 data-l10n-id="current-passcode" data-mode="edit">Current Passcode</h1>
-      <h1 data-l10n-id="new-passcode" data-mode="new">New Passcode</h1>
-      <h1 data-l10n-id="enter-passcode" data-mode="confirm,confirmLock">Enter Passcode</h1>
+      <h1 data-l10n-id="passcode-heading" data-mode="create"></h1>
+      <h1 data-l10n-id="current-passcode" data-mode="edit"></h1>
+      <h1 data-l10n-id="new-passcode" data-mode="new"></h1>
+      <h1 data-l10n-id="enter-passcode" data-mode="confirm,confirmLock"></h1>
     </header>
     <div class="passcode-overlay">
       <input type="number" x-inputmode="digit" class="passcode-input" />
       <div class="passcode-container">
         <div class="passcode" id="passcode-pseudo-input">
-          <label data-l10n-id="create-a-passcode" data-mode="new,create">Create a Passcode</label>
-          <label data-l10n-id="passcode" data-mode="confirm,confirmLock,edit">Passcode</label>
+          <label data-l10n-id="create-a-passcode" data-mode="new,create"></label>
+          <label data-l10n-id="passcode" data-mode="confirm,confirmLock,edit"></label>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
         </div>
         <div class="passcode" data-mode="new,create" id="passcode-pseudo-confirm-input">
-          <label data-l10n-id="confirm-passcode" data-mode="new,create">Confirm Passcode</label>
+          <label data-l10n-id="confirm-passcode" data-mode="new,create"></label>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
           <span class="passcode-digit"></span>
         </div>
-        <div class="passcode-error" data-l10n-id="incorrect-passcode" data-type="incorrect">Incorrect passcode!</div>
-        <div class="passcode-error" data-l10n-id="passcode-doesnt-match" data-type="mismatch">Passcode doesn't match. Try again!</div>
+        <div class="passcode-error" data-l10n-id="incorrect-passcode" data-type="incorrect"></div>
+        <div class="passcode-error" data-l10n-id="passcode-doesnt-match" data-type="mismatch"></div>
       </div>
     </div>
   </template>
