--- a/apps/privacy-panel/templates/about/main.html
+++ b/apps/privacy-panel/templates/about/main.html
@@ -22,7 +22,7 @@
       </header>
       <ul>
         <li>
-          <p class="description" data-l10n-id="about-description"></p>
+          <p class="description" data-l10n-id="about-desc"></p>
         </li>
       </ul>
     </div>
