--- a/apps/privacy-panel/templates/ala/main.html
+++ b/apps/privacy-panel/templates/ala/main.html
@@ -4,20 +4,20 @@
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="ala-panel"></h1>
+      <h1 data-l10n-id="la-panel"></h1>
     </header>
     <div>
       <ul>
         <li>
           <label class="pack-switch">
             <input type="checkbox" class="uninit" name="geolocation.enabled">
-            <span data-l10n-id="use-geolocation"></span>
+            <span data-l10n-id="geolocation"></span>
           </label>
         </li>
         <li class="show-when-geolocation-on">
           <label class="pack-switch">
             <input type="checkbox" class="uninit" name="ala.settings.enabled">
-            <span data-l10n-id="use-location-adjustment"></span>
+            <span data-l10n-id="location-adjustment"></span>
           </label>
         </li>
         <li class="hide-when-ala-on">
