--- a/apps/privacy-panel/templates/rp/features.html
+++ b/apps/privacy-panel/templates/rp/features.html
@@ -13,21 +13,21 @@
             <input type="checkbox" name="rp.locate.enabled" class="uninit">
             <span data-l10n-id="remote-locate"></span>
           </label>
-          <p class="explanation" data-l10n-id="remote-locate-desc"></p>
+          <p class="explanation" data-l10n-id="remote-locate-description"></p>
         </li>
         <li class="remote-ring hint">
           <label class="pack-switch">
             <input type="checkbox" name="rp.ring.enabled" class="uninit">
             <span data-l10n-id="remote-ring"></span>
           </label>
-          <p class="explanation" data-l10n-id="remote-ring-desc"></p>
+          <p class="explanation" data-l10n-id="remote-ring-description"></p>
         </li>
         <li class="remote-lock hint">
           <label class="pack-switch">
             <input type="checkbox" name="rp.lock.enabled" class="uninit">
             <span data-l10n-id="remote-lock"></span>
           </label>
-          <p class="explanation" data-l10n-id="remote-lock-desc"></p>
+          <p class="explanation" data-l10n-id="remote-lock-description"></p>
         </li>
       </ul>
       <div class="overlay">
