--- a/apps/privacy-panel/templates/ala/custom.html
+++ b/apps/privacy-panel/templates/ala/custom.html
@@ -4,7 +4,7 @@
       <a class="back" href="#">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="define-custom-location"></h1>
+      <h1 data-l10n-id="custom-location"></h1>
     </header>
     <div>
       <ul>
