--- a/apps/privacy-panel/templates/ala/exceptions.html
+++ b/apps/privacy-panel/templates/ala/exceptions.html
@@ -4,7 +4,7 @@
       <a class="pp-link back" href="#ala-main">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="ala-panel"></h1>
+      <h1 data-l10n-id="la-panel"></h1>
     </header>
     <div>
       <ul id="app-list">
