--- a/apps/privacy-panel/templates/about/main.html
+++ b/apps/privacy-panel/templates/about/main.html
@@ -4,29 +4,25 @@
       <a class="pp-link back" href="#root">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="about-privacy-panel">About Privacy Panel</h1>
+      <h1 data-l10n-id="about-privacy-panel"></h1>
     </header>
     <div>
       <ul>
         <li>
-          <span data-l10n-id="version">Version</span>
+          <span data-l10n-id="version"></span>
           <small id="privacy-panel-version" class="multiline"></small>
         </li>
         <li>
-          <span data-l10n-id="build-id">Build-ID</span>
+          <span data-l10n-id="build-id"></span>
           <small id="privacy-panel-build" class="multiline"></small>
         </li>
       </ul>
       <header>
-        <h2 data-l10n-id="about-header">About the Privacy Panel</h2>
+        <h2 data-l10n-id="about-header"></h2>
       </header>
       <ul>
         <li>
-          <p class="description" data-l10n-id="about-description">
-            Together with Deutsche Telecom the Mozilla Foundation developed the
-            Privacy Panel to enable the user to take back control of their
-            personal data ...
-          </p>
+          <p class="description" data-l10n-id="about-desc"></p>
         </li>
       </ul>
     </div>
