--- a/apps/privacy-panel/templates/ala/exceptions.html
+++ b/apps/privacy-panel/templates/ala/exceptions.html
@@ -4,14 +4,12 @@
       <a class="pp-link back" href="#ala-main">
         <span class="icon gaia-icon-back">back</span>
       </a>
-      <h1 data-l10n-id="location-accuracy">Location Accuracy</h1>
+      <h1 data-l10n-id="la-panel"></h1>
     </header>
     <div>
       <ul id="app-list">
         <li>
-          <p class="description" data-l10n-id="app-list-description">
-            This list shows all the apps, which are allowed to use your location.
-          </p>
+          <p class="description" data-l10n-id="app-list-description"></p>
         </li>
       </ul>
     </div>
