--- a/apps/privacy-panel/templates/gt/rpp_locate.html
+++ b/apps/privacy-panel/templates/gt/rpp_locate.html
@@ -12,17 +12,17 @@
             <img src="style/images/guided_tour/privacy-panel-gt-08.svg">
           </div>
           <div class="gt-description">
-            <h2 data-l10n-id="gt-rpp-locate-header">How to locate my phone?</h2>
+            <h2 data-l10n-id="gt-rpp-locate-header"></h2>
             <p>
-              <span data-l10n-id="gt-rpp-locate-desc1">If your phone is lost, just take the phone of a friend and send a SMS with</span><br>
-              <b><span data-l10n-id="gt-rpp-locate-command">“RPP locate YOURPASSPHRASE“</span></b><br>
-              <span data-l10n-id="gt-rpp-locate-desc2">to your phone number and you‘ll get the exact GPS coordinates via SMS in return. Make sure to set up the passphrase!</span>
+              <span data-l10n-id="gt-rpp-locate-desc1"></span><br>
+              <b><span data-l10n-id="gt-rpp-locate-command"></span></b><br>
+              <span data-l10n-id="gt-rpp-locate-desc2"></span>
             </p>
           </div>
           <div class="gt-action">
             <div class="gt-pager page-8"></div>
-            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-passphrase" data-l10n-id="back">Back</a>
-            <a class="pp-link btn btn-blue" href="#gt-rpp-ring" data-l10n-id="next">Next</a>
+            <a class="pp-link btn btn-dark-gray back" href="#gt-rpp-passphrase" data-l10n-id="back"></a>
+            <a class="pp-link btn btn-blue" href="#gt-rpp-ring" data-l10n-id="next"></a>
           </div>
         </li>
       </ul>
