--- a/apps/privacy-panel/templates/gt/rp_ring.html
+++ b/apps/privacy-panel/templates/gt/rp_ring.html
@@ -1,10 +1,10 @@
 <element name="gt-rp-ring" extends="section">
   <template>
-    <header class="gt-header">
+    <gaia class="gt-header">
       <a class="pp-link back" href="#root">
-        <span class="icon gaia-icon-close">back</span>
+        <span class="icon gaia-icon-close"></span>
       </a>
-    </header>
+    </gaia>
     <div>
       <ul>
         <li>
