--- a/apps/privacy-panel/templates/rp/passcode.html
+++ b/apps/privacy-panel/templates/rp/passcode.html
@@ -2,7 +2,7 @@
   <template>
     <header>
       <a class="pp-link back" href="#rp-screenlock">
-        <span class="icon gaia-icon-back">back</span>
+        <span class="icon gaia-icon-back"></span>
       </a>
       <menu type="toolbar">
         <button class="passcode-change" data-mode="new" data-l10n-id="change"></button>
