--- a/apps/privacy-panel/templates/about/main.html
+++ b/apps/privacy-panel/templates/about/main.html
@@ -1,11 +1,11 @@
 <element name="about" extends="section">
   <template>
-    <header>
+    <gaia-header>
       <a class="pp-link back" href="#root">
-        <span class="icon gaia-icon-back">back</span>
+        <span class="icon gaia-icon-back"></span>
       </a>
       <h1 data-l10n-id="about-privacy-panel"></h1>
-    </header>
+    </gaia-header>
     <div>
       <ul>
         <li>
