--- a/apps/privacy-panel/templates/gt/ala_exceptions.html
+++ b/apps/privacy-panel/templates/gt/ala_exceptions.html
@@ -2,7 +2,7 @@
   <template>
     <header class="gt-header">
       <a class="pp-link back" href="#root">
-        <span class="icon gaia-icon-close">back</span>
+        <span class="icon gaia-icon-close"></span>
       </a>
     </header>
     <div>
