--- a/apps/privacy-panel/templates/rp/change_pass.html
+++ b/apps/privacy-panel/templates/rp/change_pass.html
@@ -13,8 +13,12 @@
         </li>
         <li>
           <form id="rp-change-pass-form">
-            <select class="pin-type"></select>
-            <input class="pin" x-inputmode="digit" size="8" maxlength="8" type="password" placeholder="">
+          <li>
+            <span class="button icon icon-dialog">
+              <select class="pin-type"></select>
+            </span>
+          </li>            
+            <input class="pin" x-inputmode="digit" size="8" maxlength="8" type="password" data-l10n-id="enter" placeholder="Enter Code">
             <div class="pin-validation-message"></div>
             <input class="pass1" type="password" data-l10n-id="new-passphrase" placeholder="New passphrase">
             <input class="pass2" type="password" data-l10n-id="confirm-new-passphrase" placeholder="Confirm new passphrase">
